--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS Lambda
+name: Deploy Lambda Functions
 
 on:
   push:
@@ -7,24 +7,57 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
+      with:
+        fetch-depth: 2
+    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
-
-    - name: Create deployment package
+        aws-region: ap-south-1  # Change to your region
+    
+    - name: Get changed Python files
+      id: changed-files
       run: |
-        zip -r lambda-deployment.zip lambda_function.py
-
-    - name: Deploy to Lambda
+        # Find changed .py files (excluding workflow files)
+        changed_files=$(git diff --name-only HEAD~1 HEAD | grep '\.py$' | grep -v '.github' || true)
+        echo "Changed files: $changed_files"
+        echo "files<<EOF" >> $GITHUB_OUTPUT
+        echo "$changed_files" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+    
+    - name: Deploy changed functions
       run: |
-        aws lambda update-function-code \
-          --function-name test_github \
-          --zip-file fileb://lambda-deployment.zip
+        files="${{ steps.changed-files.outputs.files }}"
+        if [ -z "$files" ]; then
+          echo "No Python files changed"
+          exit 0
+        fi
+        
+        echo "$files" | while read file; do
+          if [ -n "$file" ]; then
+            # Extract function name (remove .py extension)
+            function_name=$(basename "$file" .py)
+            
+            echo "Deploying function: $function_name from file: $file"
+            
+            # Create deployment package with the file renamed to lambda_function.py
+            cp "$file" lambda_function.py
+            zip lambda-deployment.zip lambda_function.py
+            
+            # Deploy to AWS Lambda
+            aws lambda update-function-code \
+              --function-name "$function_name" \
+              --zip-file fileb://lambda-deployment.zip
+            
+            echo "✅ Successfully deployed: $function_name"
+            
+            # Clean up
+            rm lambda_function.py lambda-deployment.zip
+          fi
+        done
