--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -11,53 +11,41 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      with:
-        fetch-depth: 2
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1  # Change to your region
+        aws-region: ap-south-1
 
-    - name: Get changed Python files
-      id: changed-files
+    - name: List files for debugging
       run: |
-        # Find changed .py files (excluding workflow files)
-        changed_files=$(git diff --name-only HEAD~1 HEAD | grep '\.py$' | grep -v '.github' || true)
-        echo "Changed files: $changed_files"
-        echo "files<<EOF" >> $GITHUB_OUTPUT
-        echo "$changed_files" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        echo "Files in repository:"
+        ls -la *.py
+        echo "Git status:"
+        git status
 
-    - name: Deploy changed functions
+    - name: Deploy test_github function
       run: |
-        files="${{ steps.changed-files.outputs.files }}"
-        if [ -z "$files" ]; then
-          echo "No Python files changed"
-          exit 0
+        echo "Deploying test_github function"
+        
+        # Check if file exists
+        if [ ! -f "test_github.py" ]; then
+          echo "Error: test_github.py not found!"
+          exit 1
         fi
         
-        echo "$files" | while read file; do
-          if [ -n "$file" ]; then
-            # Extract function name (remove .py extension)
-            function_name=$(basename "$file" .py)
-            
-            echo "Deploying function: $function_name from file: $file"
-            
-            # Create deployment package with the file renamed to lambda_function.py
-            cp "$file" lambda_function.py
-            zip lambda-deployment.zip lambda_function.py
-            
-            # Deploy to AWS Lambda
-            aws lambda update-function-code \
-              --function-name "$function_name" \
-              --zip-file fileb://lambda-deployment.zip
-            
-            echo "✅ Successfully deployed: $function_name"
-            
-            # Clean up
-            rm lambda_function.py lambda-deployment.zip
-          fi
-        done
+        # Create deployment package
+        cp test_github.py lambda_function.py
+        zip lambda-deployment.zip lambda_function.py
+        
+        # Deploy to AWS
+        aws lambda update-function-code \
+          --function-name test_github \
+          --zip-file fileb://lambda-deployment.zip
+        
+        echo "✅ Successfully deployed test_github"
+        
+        # Clean up
+        rm lambda_function.py lambda-deployment.zip
