--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -1,4 +1,4 @@
-name: Deploy Lambda Functions
+name: Deploy Changed Lambda Functions
 
 on:
   push:
@@ -11,88 +11,71 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Get changed files
+      id: changed-files
+      uses: tj-actions/changed-files@v40
       with:
-        fetch-depth: 0  # Get full history for better diff detection
+        files: |
+          *.py
+        files_ignore: |
+          .github/**
 
     - name: Configure AWS credentials
+      if: steps.changed-files.outputs.any_changed == 'true'
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
         aws-region: ap-south-1
 
-    - name: Get changed Python files
-      id: changed-files
-      run: |
-        # Get list of changed .py files (excluding .github folder)
-        if [ "${{ github.event.before }}" = "0000000000000000000000000000000000000000" ]; then
-          # First push to repository
-          changed_files=$(find . -name "*.py" -not -path "./.github/*" -printf "%f\n")
-        else
-          # Regular push - find changed files
-          changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.py$' | grep -v '.github' | xargs -I {} basename {} || echo "")
-        fi
-        
-        echo "Changed Python files:"
-        echo "$changed_files"
-        
-        # Save to output
-        echo "files<<EOF" >> $GITHUB_OUTPUT
-        echo "$changed_files" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
-
     - name: Deploy changed functions
+      if: steps.changed-files.outputs.any_changed == 'true'
       run: |
-        files="${{ steps.changed-files.outputs.files }}"
-        
-        if [ -z "$files" ] || [ "$files" = "" ]; then
-          echo "ℹ️ No Python files changed - nothing to deploy"
-          exit 0
-        fi
-        
-        echo "🚀 Starting deployment of changed functions..."
+        echo "🚀 Deploying changed Lambda functions..."
         echo ""
         
-        # Counter for tracking deployments
+        # Get the list of changed Python files
+        changed_files="${{ steps.changed-files.outputs.all_changed_files }}"
+        
         deployed_count=0
         failed_count=0
         
-        for file in $files; do
-          if [ -f "$file" ]; then
-            # Extract function name (remove .py extension)
-            function_name=$(basename "$file" .py)
-            
-            echo "📦 Deploying: $function_name (from $file)"
-            
-            # Create deployment package
-            cp "$file" lambda_function.py
-            zip -q lambda-deployment.zip lambda_function.py
-            
-            # Deploy to AWS Lambda
-            if aws lambda update-function-code \
-              --function-name "$function_name" \
-              --zip-file fileb://lambda-deployment.zip > /dev/null 2>&1; then
-              echo "✅ SUCCESS: $function_name deployed"
-              deployed_count=$((deployed_count + 1))
-            else
-              echo "❌ FAILED: $function_name (function may not exist in AWS)"
-              failed_count=$((failed_count + 1))
-            fi
-            
-            # Clean up
-            rm -f lambda_function.py lambda-deployment.zip
-            echo ""
+        for file in $changed_files; do
+          echo "📦 Processing: $file"
+          
+          # Extract function name (remove .py extension)
+          function_name=$(basename "$file" .py)
+          
+          echo "🔄 Deploying function: $function_name"
+          
+          # Create deployment package
+          cp "$file" lambda_function.py
+          zip -q lambda-deployment.zip lambda_function.py
+          
+          # Deploy to AWS Lambda
+          if aws lambda update-function-code \
+            --function-name "$function_name" \
+            --zip-file fileb://lambda-deployment.zip > /dev/null 2>&1; then
+            echo "✅ SUCCESS: $function_name deployed from $file"
+            deployed_count=$((deployed_count + 1))
+          else
+            echo "❌ FAILED: $function_name (function may not exist in AWS)"
+            failed_count=$((failed_count + 1))
           fi
+          
+          # Clean up
+          rm -f lambda_function.py lambda-deployment.zip
+          echo ""
         done
         
         echo "📊 DEPLOYMENT SUMMARY:"
-        echo "   ✅ Successful: $deployed_count"
-        echo "   ❌ Failed: $failed_count"
-        
-        if [ $failed_count -gt 0 ]; then
-          echo ""
-          echo "💡 Failed deployments may be due to:"
-          echo "   - Lambda function doesn't exist in AWS"
-          echo "   - Function name mismatch"
-          echo "   - Insufficient permissions"
-        fi
+        echo "   📁 Files changed: $(echo '${{ steps.changed-files.outputs.all_changed_files }}' | wc -w)"
+        echo "   ✅ Successful deployments: $deployed_count"
+        echo "   ❌ Failed deployments: $failed_count"
+
+    - name: No changes detected
+      if: steps.changed-files.outputs.any_changed == 'false'
+      run: |
+        echo "ℹ️ No Python files were changed in this commit"
+        echo "🏠 Nothing to deploy - Lambda functions remain unchanged"
